--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@
   --primary-white-color: #ffffff;
   --footer-link-color: rgba(255, 255, 255, 0.6);
 }
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: #ffffff;
@@ -60,8 +69,8 @@ body {
 }
 
 
-.nav-list >.nav-item:not(:first-child){
-  margin-left: 50px;
+.nav-item:not(:last-child){
+  margin-right: 50px;
 }
 
 
