--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,8 @@ margin-bottom: 10px;
 
 .team-item {
   background-color: var(--primary-white-color);
-
+  border-radius: 0px 0px 4px 4px;
+  
 }
 
 .team-item:not(:first-child) {
