add size hero section

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,9 @@ body {
 /* --------------------Секция Hero --------------------------*/
 
 .hero {
+  max-width: 1600px;
+  max-height: 600px;
+
   padding-top: 200px;
   padding-bottom: 280px;
 
